# obs-controller

./: .gitignore  CMakeLists.txt
src/: main.cpp
